--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,8 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="Partidas" />
+                android:text="Partidas"
+                android:onClick="onPartida"/>
 
             <Button
                 android:id="@+id/button4"
